--- a/nova-aff/src/styles/pages/homepage.module.css
+++ b/nova-aff/src/styles/pages/homepage.module.css
@@ -339,6 +339,7 @@
 
 .ecosystemHeader {
   margin-bottom: 80px;
+  text-align: center;
 }
 
 .ecosystemTitle {
@@ -357,8 +358,8 @@
   font-size: clamp(16px, 1.5vw, 20px);
   line-height: 1.6;
   color: #4a5568;
-  max-width: 700px;
   opacity: 0.9;
+  text-align: center;
 }
 
 .ecosystemGrid {
